--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -98,6 +98,38 @@ html {
       width: 45%;
     }
     }
+
+    #social-navigation {
+      display: none;
+
+      @include mq(ML) {
+      display: inline;
+      position: absolute;
+      bottom: 0px;
+      margin-bottom: 55px;
+      width: 100%;
+      }
+      @include mq(LL) {
+        margin-bottom: 35px;
+      }
+    }
+
+    .copyright {
+      display: none;
+
+      @include mq(ML) {
+      display: block;
+      position: absolute;
+      bottom: 0;
+      margin-bottom: 5px;
+      text-align: center;
+      color: #FFF;
+      opacity: 0.8;
+      bottom: 0;
+      width: 95%;
+      }
+    }
+
 }
 .theme-button {
   text-decoration: none;
