Fixed month format

--- a/content/themes/nichole-theme/partials/list-post.hbs
+++ b/content/themes/nichole-theme/partials/list-post.hbs
@@ -3,7 +3,7 @@
     <div class="posted-circle">
       <time datetime="{{date published_at format="YYYY-MM-DD"}}">
         {{date published_at format="DD"}}
-        <span id="month-stamp">{{date published_at format="MMMM"}}</span>
+        <span id="month-stamp">{{date published_at format="MMM"}}</span>
         {{date published_at format="YY"}}
       </time>
     </div>
