--- a/content/themes/uno-master/assets/css/uno.css
+++ b/content/themes/uno-master/assets/css/uno.css
@@ -1120,7 +1120,7 @@ pre {
 
 .footer {
   display: block;
-  padding: 2em 0 0 0;
+  padding: 2em 0 0 2em;
   border-top: 2px solid #dddddd;
   font-size: .7em;
   color: #b3b3b3; }
