--- a/content/themes/uno-master/partials/side-panel.hbs
+++ b/content/themes/uno-master/partials/side-panel.hbs
@@ -15,7 +15,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="/#blog" title="link to {{@blog.title}} blog" class="blog-button">Blog</a></li>
-              <li class="navigation__item"><a href="/portfolio" title="link to {{@blog.title}} portfolio" class="portfolio-button">Portfolio</a></li>
+              <li class="navigation__item"><a href="/personal-portfolio" title="link to {{@blog.title}} portfolio" class="portfolio-button">Portfolio</a></li>
             </ul>
           </nav>
 
